tests/fixtures/invalid/bytes_add_int.py
# Cannot concatenate Bytes and Int
x: bytes = b"hello" + 1
